--- a/tests/samples/grafana_dashboards/up.json.tmpl
+++ b/tests/samples/grafana_dashboards/up.json.tmpl
@@ -3,10 +3,7 @@
     "list": [
       {
         "builtIn": 1,
-        "datasource": {
-          "type": "grafana",
-          "uid": "-- Grafana --"
-        },
+        "datasource": "-- Grafana --",
         "enable": true,
         "hide": true,
         "iconColor": "rgba(0, 211, 255, 1)",
@@ -23,24 +20,21 @@
   },
   "editable": true,
   "fiscalYearStartMonth": 0,
+  "gnetId": null,
   "graphTooltip": 0,
-  "id": 7,
+  "id": 2,
+  "iteration": 1668626036787,
   "links": [],
   "liveNow": false,
   "panels": [
     {
-      "datasource": {
-        "type": "prometheus",
-        "uid": "${prometheusds}"
-      },
+      "datasource": "juju_test-grafana-dashboards-k30t_83821afa-f7ad-447c-8c19-1a8b69109229_prom_0",
       "fieldConfig": {
         "defaults": {
           "color": {
             "mode": "palette-classic"
           },
           "custom": {
-            "axisCenteredZero": false,
-            "axisColorMode": "text",
             "axisLabel": "",
             "axisPlacement": "auto",
             "barAlignment": 0,
@@ -96,24 +90,18 @@
         "legend": {
           "calcs": [],
           "displayMode": "list",
-          "placement": "bottom",
-          "showLegend": true
+          "placement": "bottom"
         },
         "tooltip": {
-          "mode": "single",
-          "sort": "none"
+          "mode": "single"
         }
       },
       "targets": [
         {
-          "datasource": {
-            "type": "prometheus",
-            "uid": "${prometheusds}"
-          },
-          "editorMode": "code",
+          "exemplar": true,
           "expr": "up",
-          "legendFormat": "__auto",
-          "range": true,
+          "interval": "",
+          "legendFormat": "",
           "refId": "A"
         }
       ],
@@ -121,7 +109,7 @@
       "type": "timeseries"
     }
   ],
-  "schemaVersion": 37,
+  "schemaVersion": 32,
   "style": "dark",
   "tags": [],
   "templating": {
@@ -129,11 +117,14 @@
       {
         "current": {
           "selected": false,
-          "text": "juju_cos4_c414689a-cb84-4a96-88c1-ef63168b8170_prometheus_0",
-          "value": "juju_cos4_c414689a-cb84-4a96-88c1-ef63168b8170_prometheus_0"
+          "text": "juju_test-grafana-dashboards-k30t_83821afa-f7ad-447c-8c19-1a8b69109229_prom_0",
+          "value": "juju_test-grafana-dashboards-k30t_83821afa-f7ad-447c-8c19-1a8b69109229_prom_0"
         },
+        "description": null,
+        "error": null,
         "hide": 0,
         "includeAll": false,
+        "label": null,
         "multi": false,
         "name": "prometheusds",
         "options": [],
@@ -153,7 +144,6 @@
   "timepicker": {},
   "timezone": "",
   "title": "up with dropdowns",
-  "uid": "2Md4QiOVk",
-  "version": 1,
-  "weekStart": ""
+  "uid": "zaf9LZO4k",
+  "version": 3
 }
