--- a/tests/samples/grafana_dashboards/up.json.tmpl
+++ b/tests/samples/grafana_dashboards/up.json.tmpl
@@ -28,7 +28,7 @@
   "liveNow": false,
   "panels": [
     {
-      "datasource": "juju_test-grafana-dashboards-k30t_83821afa-f7ad-447c-8c19-1a8b69109229_prom_0",
+      "datasource": "${prometheusds}",
       "fieldConfig": {
         "defaults": {
           "color": {
